After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680879 - marshal: Fix build break on Python 2
marshal: Fix build break on Python 2
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-31 02:32 UTC by Colin Walters
Modified: 2012-07-31 06:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
marshal: Fix build break on Python 2 (3.09 KB, patch)
2012-07-31 02:32 UTC, Colin Walters
none Details | Review

Description Colin Walters 2012-07-31 02:32:28 UTC
I *think* using this wrapper function instead is right.
Comment 1 Colin Walters 2012-07-31 02:32:30 UTC
Created attachment 219950 [details] [review]
marshal: Fix build break on Python 2
Comment 2 Martin Pitt 2012-07-31 06:51:44 UTC
Whoops, sorry about that. Applied, thanks!