marshal: Fix build break on Python 2

I *think* using this wrapper function instead is right.

https://bugzilla.gnome.org/show_bug.cgi?id=680879